files renamed to match

--- a/dec-ip.html
+++ b/dec-ip.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,8 +10,16 @@
 
 <h1>Do you know your Akan name?</h1>
 <p>Find out below </p>
-<body>
-    
 
+<body>
+    <form>
+        <input type="text" id="birthDay">
+        <input type="text" id="birthMonth">
+        <input type="text" id="birthYear">
+        <input type="text" id="birthGender">
+    </form>
+<button type="submit" onclick="handleClick()">Submit</button>
+<p id="resultHere">Your answer</p>
 </body>
+
 </html>
