--- a/dec-ip.html
+++ b/dec-ip.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/dec-ip.css"
+    <script src="../js/dec-ip.js" defer></script>
+    
+
     <title>Document</title>
 </head>
 
