--- a/dec-ip.html
+++ b/dec-ip.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/dec-ip.css" 
-    
-
+    <link rel="stylesheet" href="../css/dec-ip.css">
+    <script src="../js/dec-ip.js"></script>
     <title>Document</title>
 </head>
 
@@ -23,7 +22,7 @@
     </form>
     <button type="submit" onclick="handleClick()">Submit</button>
     <p id="resultHere">Your answer</p>
-    <script src="../js/dec-ip.js"></script>
+    
 </body>
 
 </html>
